@@ -1,5 +1,17 @@
 2018-04-03  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK] Segfaults in enchant_broker_free_dict()
+        https://bugs.webkit.org/show_bug.cgi?id=183738
+
+        Reviewed by Michael Catanzaro.
+
+        Check enchant_broker_request_dict() didn't return nullptr before adding it to the m_enchantDictionaries vector.
+
+        * platform/text/enchant/TextCheckerEnchant.cpp:
+        (WebCore::TextCheckerEnchant::updateSpellCheckingLanguages):
+
+2018-04-03  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK] NetworkProcess from WebKitGtk+ 2.19.9x SIGSEVs in NetworkStorageSession (secret search callback)
         https://bugs.webkit.org/show_bug.cgi?id=183346
 
